[package]
description = "Parity Ethereum Whisper Protocol Implementation"
name = "parity-whisper"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
bitflags = "1.2"
byteorder = "1.0.0"
ethereum-types = "0.6.0"
ethcore-network = { git = "https://github.com/paritytech/parity-ethereum.git" }
ring = "0.14.6"
ethkey = { git = "https://github.com/paritytech/parity-ethereum.git" }
hex = "0.2"
log = "0.4"
parity-util-mem = "0.1"
ordered-float = "0.5"
parking_lot = "0.8"
rand = "0.6"
rand_xorshift = "0.1.1"
rlp = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slab = "0.3"
smallvec = "0.6"
tiny-keccak = "1.4"
time-utils = { git = "https://github.com/paritytech/parity-ethereum.git" }

jsonrpc-core = "12.0.0"
jsonrpc-derive = "12.0.0"
jsonrpc-pubsub = "12.0.0"
zeroize = "0.9.1"

[workspace]
members = ["cli"]
