[package]
name = "whisper-cli"
description = "Whisper command line interface"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0"

[dependencies]
docopt = "1.0"
env_logger = "0.5"
ethcore-network = { git = "https://github.com/paritytech/parity-ethereum.git" }
ethcore-network-devp2p = { git = "https://github.com/paritytech/parity-ethereum.git" }
jsonrpc-core = "12.0.0"
jsonrpc-http-server = "12.0.0"
jsonrpc-pubsub = "12.0.0"
log = "0.4"
panic_hook = { git = "https://github.com/paritytech/parity-ethereum.git" }
parity-whisper = { path = "../" }
serde = "1.0"
serde_derive = "1.0"
ethkey = { git = "https://github.com/paritytech/parity-ethereum.git" }
rustc-hex = "2.0"

[[bin]]
name = "whisper"
path = "src/main.rs"
